# ambient

./: .gitignore  .gitmodules  CLAUDE.md  COGNITO_AUTH_SETUP.md  LICENSE  README.MD  README.md  index.html  package-lock.json  package.json  run.sh  update.sh  vite.config.js
.github/workflows/: publish.yml
app/: .gitignore  biome.json  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml
app/public/: floating.html  simple-floating.html
app/src-tauri/: .env  .env.example  Cargo.toml  response.json  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
app/src-tauri/.skills/code-execution/: SKILL.md
app/src-tauri/.skills/computer-use/: SKILL.md
app/src-tauri/.skills/memory-search/: SKILL.md
app/src-tauri/.skills/web-search/: SKILL.md
app/src-tauri/binaries/linux/: libggml-base.so.0.9.5  libllama.so.0.0.7710  libmtmd.so.0.0.7710
app/src-tauri/binaries/macos/: libggml-base.0.9.5.dylib  libllama.0.0.7710.dylib  libmtmd.0.0.7710.dylib
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: auth.rs  constants.rs  data.rs  db.rs  embedding.rs  images.rs  lib.rs  main.rs  prompts.rs  scheduler.rs  screen_selection.rs  settings.rs  setup.rs  sidecar.rs  tray.rs  ts_exports.rs  types.rs  vlm.rs  windows.rs
app/src-tauri/src/auth/: auth_commands.rs  auth_flow.rs  auth_storage.rs  auth_types.rs  commands.rs  deep_link.rs  jwt.rs  mod.rs  security.rs  storage.rs  types.rs
app/src-tauri/src/auth/cognito/: auth.rs  mod.rs  types.rs
app/src-tauri/src/auth/oauth2/: google.rs  microsoft.rs  mod.rs  types.rs
app/src-tauri/src/auth/supabase/: auth.rs  mod.rs  types.rs
app/src-tauri/src/db/: activity.rs  computer_use.rs  conversations.rs  core.rs  events.rs  memory.rs  mod.rs  token_usage.rs  workflows.rs
app/src-tauri/src/events/: emitter.rs  listener.rs  mod.rs  types.rs
app/src-tauri/src/integrations/chromium/: mod.rs  server.rs  workflow.rs
app/src-tauri/src/memory/: handlers.rs  mod.rs  service.rs  types.rs
app/src-tauri/src/models/: conversations.rs  mod.rs
app/src-tauri/src/models/computer-use/: actions.rs  mod.rs
app/src-tauri/src/models/computer_use/: actions.rs  commands.rs  computer_use.rs  mod.rs  types.rs
app/src-tauri/src/models/embedding/: embedding.rs  mod.rs
app/src-tauri/src/models/llama_cpp/: server.rs
app/src-tauri/src/models/llm/: client.rs  conversations.rs  handlers.rs  mod.rs  prompts.rs  qwen3.rs  runtime.rs  schemas.rs  server.rs  state.rs  types.rs
app/src-tauri/src/models/llm/providers/: cloudflare.rs  local.rs  mod.rs  openrouter.rs  translation.rs
app/src-tauri/src/models/ocr/: mod.rs  ocr.rs
app/src-tauri/src/os_utils/: handlers.rs  mod.rs  signals.rs
app/src-tauri/src/os_utils/windows/: window.rs
app/src-tauri/src/settings/: mod.rs  service.rs  types.rs
app/src-tauri/src/skills/: executor.rs  mod.rs  registry.rs  types.rs
app/src-tauri/src/skills/builtin/: calendar.rs  code_execution.rs  computer_use.rs  email.rs  memory_search.rs  mod.rs  web_search.rs
app/src-tauri/src/tasks/: commands.rs  detection.rs  mod.rs  models.rs  service.rs  templates.rs
app/src-tauri/src/tools/calendar/: mod.rs
app/src/app/: layout.tsx  middleware.ts  page.tsx
app/src/components/: api-demo-component.tsx  app-sidebar.tsx  auth-component.tsx  auth-guard.tsx  google-login-button.tsx  nav-header.tsx  nav-logo.tsx  nav-main.tsx  nav-secondary.tsx  nav-user.tsx  signin-component.tsx  signup-component.tsx  site-header.tsx  task-card.tsx  task-list.tsx  task-status-badge.tsx
app/src/hooks/: use-hud-animations.ts  use-hud-stream.ts
app/src/lib/: api-client.ts  auth.ts  hud-management.ts  settings-service.ts  task-service.ts  task-utils.ts  utils.ts
app/src/styles/: globals.css
app/src/types/: auth.ts  conversations.ts  events.ts  llm.ts  memory.ts  settings.ts  skills.ts  tasks.ts  token_usage.ts
backend/: .gitignore  README.md  requirements.txt
backend/src/: main.py
cloudflare/workers/llm-completions/: .gitignore  package.json  pnpm-lock.yaml  wrangler.jsonc
evals/: .gitignore  README.md  config.yaml  eval.py  requirements.txt
evals/common/: __init__.py  data_loader.py  llm_client.py  prompt_manager.py  schema_manager.py
evals/prompts/: task-detection.yaml
evals/results/: task_detection_results.json
evals/schemas/: task_detection.detect_tasks.json
evals/task-detection/: __init__.py  evaluate.py  example_usage.py  run_eval.py  task_detection_data_loader.py  visualize.py
evals/task-detection/data/: eval_20250723_010657.json  eval_20250724_023719.json  eval_20250727_204937.json  eval_20250727_205120.json  eval_20250727_214006.json  eval_20250727_214034.json  eval_20250727_214110.json  eval_20250727_230041.json  eval_20250727_230338.json  eval_20250727_230423.json  eval_20250727_230621.json  eval_20250728_013707.json  eval_20250728_013752.json  eval_20250728_013959.json  eval_20250728_014100.json  eval_20250728_014206.json  eval_20250728_014315.json  eval_20250728_020744.json  eval_20250728_020915.json  eval_20250728_021124.json  eval_20250728_021427.json  eval_20250728_021952.json  eval_20250728_022322.json  eval_20250728_022524.json  eval_20250728_023104.json
evals/task-detection/prompts/: task-detection.yaml
extension/: foreground.js  manifest.json
extension/popup/: popup.css  popup.html
ml/smolvlm-training/: .gitignore  README.md  requirements.txt  vllm_requirements.txt
ml/smolvlm-training/scripts/: clean_data.py  generate_data.py  train.py  (+4 more)
server/: main.py  requirements.txt
src/: App.jsx  main.jsx
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/llm/: run-llm.bat
src-tauri/llm/server/: BUILD.md  CMakeLists.txt  run-llm.bat
src-tauri/llm/server/include/: qwen_functions.h
src-tauri/llm/server/src/: qwen2vl.cpp  qwen_functions.cpp  server.cpp  test.cpp
src-tauri/src/: control.rs  data.rs  lib.rs  llm.rs  main.rs  runtime.rs  server.rs  sidecar.rs
src/components/: LoadingSpinner.jsx  ModelDownloadBanner.jsx
src/pages/: Debug.jsx  ModelDownloadPage.jsx
(+146 files in other folders)
