[package]
name = "local-computer-use"
version = "0.1.0"
description = "Local computer use powered by llama.cpp"
authors = ["Luke Sutor"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "local_computer_use_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-shell = "2"
reqwest = { version = "0.11", features = ["json"] }
tauri-plugin-http = "2"
enigo = "0.3.0"
screenshots = "0.8.10"
tauri-plugin-fs = "2"
hf-hub = "0.4.1"
tauri-plugin-store = "2"
image = "0.25.5"
tokio = "1.42.0"
