[package]
name = "ambient"
version = "0.1.0"
description = "A local-first AI assistant built with Tauri and Next.js"
authors = ["Luke Sutor"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_nextjs_template_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [ "macos-private-api", "protocol-asset", "devtools", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tokio = { version = "1.45.1", features = ["macros"] }
rand = "0.8"
screenshots = "0.8.10"
image = "0.25.5"
tauri-plugin-fs = "2"
once_cell = "1.21.3"
rusqlite = { version = "0.37.0", features = ["bundled", "serde_json"] }
sqlite-vec = "0.1.6"
rusqlite_migration = "2.3.0"
zerocopy = "0.8.25"
reqwest = { version = "0.12.15", default-features = false, features = ["rustls-tls", "json", "stream", "blocking"] }
tokio-stream = { version = "0.1.17", features = ["net"] }
chrono = { version = "0.4.41", features = ["serde"] }
uuid = { version = "1.17.0", features = ["v4"] }
ts-rs = "11.0.1"
tauri-plugin-log = "2"
log = "0.4"
async-trait = "0.1"

# Auth crates
keyring = { version = "3.6.3", features = ["windows-native", "apple-native"] }
base64 = "0.22"
tauri-plugin-deep-link = "2"
urlencoding = "2.1"
url = "2.4"
tauri-plugin-store = "2"

# OCR crates
ocrs = "0.12.0"
rten = "0.24.0"
rten-text = "0.24.0"
rten-tensor = "0.24.0"
pdf-extract = "0.10.0"

# Crypto
aes-gcm = "0.10"
sha2 = "0.10"

# Computer use crates
enigo = "0.6.1"
tauri-plugin-os = "2"

[profile.dev]
debug = true
opt-level = 0

# Optimize rten and rten-prefixed dependencies for performance even in debug builds
[profile.dev.package.rten]
opt-level = 3

[profile.dev.package.rten-base]
opt-level = 3

[profile.dev.package.rten-tensor]
opt-level = 3

[profile.dev.package.rten-imageproc]
opt-level = 3

[profile.dev.package.rten-vecmath]
opt-level = 3

[profile.dev.package.rten-gemm]
opt-level = 3

[profile.dev.package.rten-simd]
opt-level = 3

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
